<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_title">TPMS</string>
    <string name="app_name">TPMS</string>
    <string name="tpmsversion">V8.0</string>
    <string name="action_settings">Set</string>
    <string name="refreshing">Refreshing...</string>
    <string name="textBtnRTS">RTS - Request To Send</string>
    <string name="textBtnDTR">DTR - Data Terminal Ready</string>
    <string name="empty" />
    <string name="detection_mode">Detection Mode(Test)</string>
    <string name="setting">Setting</string>
    <string name="bind_bluetooth">Bind bluetooth device</string>
    <string name="alarm_switch">alarm switch</string>
    <string name="language_setting">language</string>
    <string name="pressure_unit">Pressure Unit</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="language_chinese">chinese</string>
    <string name="pressure_unit_kpa">KPa</string>
    <string name="pressure_unit_bar">Bar</string>
    <string name="pressure_unit_psi">Psi</string>
    <string name="pressure_unit_kg">kg</string>
    <string name="temperature_unit_c">°C</string>
    <string name="temperature_unit_f">°F</string>
    <string name="no_bluetooth_bind">None</string>
    <string name="warn_on">alarm is on</string>
    <string name="setting_language">set Language</string>
    <string name="comm_ok">OK</string>
    <string name="comm_cancel">Cancel</string>
    <string name="comm_loading">Loading………</string>
    <string name="high_pressure">Pressure High Limit</string>
    <string name="low_pressure">Pressure Low Limit</string>
    <string name="high_temprature">Temperature High Limit</string>
    <string name="msg_tire_switch_success">Tire switch success</string>
    <string name="msg_tire_study_success">%1$sID study success</string>
    <string name="ask_to_bind">Haven\'t bind a bluetooth device, whether binding bluetooth device now?</string>
    <string name="go_to_bind">Now the binding</string>
    <string name="do_not_bind">No binding</string>
    <string name="msg_tips">Prompt</string>
    <string name="menu">Menu</string>
    <string name="alarm_voice_switch">Sound Notification</string>
    <string name="keep_screen_switch">Keep screen on</string>
    <string name="come_back">Back</string>
    <string name="msg_press_back_again_to_exit">Again according to the exit</string>
    <string name="msg_state_connected">(Connected)</string>
    <string name="msg_state_connecting">(Connecting…)</string>
    <string name="msg_state_connect_fail">(Connect fail)</string>
    <string name="msg_state_connect_lost">(Connect lost)</string>
    <string name="msg_connecting">Connecting…</string>
    <string name="msg_studying">Learning…</string>
    <string name="msg_study_cancel">Learn canceled</string>
    <string name="msg_switching">Exchanging…</string>
    <string name="msg_study_command_send_fail">Send learn command fail</string>
    <string name="msg_study_success">ID learn success</string>
    <string name="msg_switch_success">Tire exchange success</string>
    <string name="tips_connect_fail">The connection fails, click on the title bar try again</string>
    <string name="tips_connect_lost">Connection has been disconnected, click on the title bar reconnection</string>
    <string name="tips_click_tire_start_study">Click on the corresponding tire begin to learn</string>
    <string name="tips_click_tire_start_switch">Choose two tyres</string>
    <string name="mode_study">Sensor-to-Tire Matching Mode</string>
    <string name="mode_switch">Tire Rotation Mode</string>
    <string name="mode_watch">Monitoring mode</string>
    <string name="mode_electricity_query">Sensors Battery Voltage Check</string>
    <string name="tyre_switch">Tire Rotation Mode</string>
    <string name="is_tyre_switch">Determine the tire ID exchange?</string>
    <string name="msg_choose_mode">Please choose to do</string>
    <string name="item_study">ID learn mode</string>
    <string name="item_switch">Exchange mode</string>
    <string name="tip_alarm_on">The alarm sound has been opened</string>
    <string name="tip_alarm_off">The alarm sound has been closed</string>
    <string name="alarm_leak">Sensor detected a\10 Tire Leak Problem</string>
    <string name="alarm_low_battery">Sensor detected a\10 Low Battery Problem</string>
    <string name="alarm_signal_error">Sensor detected a\10 No RF Signal Problem</string>
    <string name="alarm_high_pressure">Sensor detected a\10 High Tire Pressure Problem</string>
    <string name="alarm_low_pressure">Sensor detected a\10 Low Tire Pressure Problem</string>
    <string name="alarm_high_temprature">Sensor detected a\10 High Tire Temperature Problem</string>
    <string name="msg_want_switch">Exchange for %1$s and %2$s?</string>
    <string name="give_up_study">Give up learning</string>
    <string name="msg_connect_success">The connection is successful</string>
    <string name="msg_studying_tire_id">Is learning to tire ID, please in 4 minutes to %1$s.</string>
    <string name="visible">visible,</string>
    <string name="paired">paired</string>
    <string name="unpaired">unpaired</string>
    <string name="lab_signal_strength">,signal strength:</string>
    <string name="signal_strong">strong</string>
    <string name="signal_general">general</string>
    <string name="signal_weak">weak</string>
    <string name="do_not_bind_device">Don\'t bind any bluetooth device</string>
    <string name="re_scan_devices">Rescan bluetooth devices</string>
    <string name="l_f_tire">Front Left (FL)</string>
    <string name="r_f_tire">Front Right (FR)</string>
    <string name="l_r_tire">Rear Left (RL)</string>
    <string name="r_r_tire">Rear Right (RR)</string>
    <string name="r_spare_tire">Spare Tire (ST)</string>
    <string name="l_f_tire_id">FL</string>
    <string name="r_f_tire_id">FR</string>
    <string name="l_r_tire_id">RL</string>
    <string name="r_r_tire_id">RR</string>
    <string name="r_spare_tire_id">ST</string>
    <string name="exit">Exit</string>
    <string name="msg_run_in_background">TPMS is run at background,you can exit from menu</string>
    <string name="msg_device_not_bind">bluetooth device is not bind</string>
    <string name="msg_bluetooth_closed">bluetooth is closed</string>
    <string name="msg_n_tire_alarming">TPMS Alert</string>
    <string name="msg_connect_fail">connect fail</string>
    <string name="msg_connect_lost">connect lost</string>
    <string name="msg_tpms_running">TPMS is running</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
    <string name="emitter_matching">Emitter_Matching</string>
    <string name="emitter_matching_fail">Match Fail</string>
    <string name="tyre_transposition">Tyre_Transposition</string>
    <string name="matching">Matching</string>
    <string name="transposition">Transposition</string>
    <string name="restore_the_default_settings">Restore to Default</string>
    <string name="confirm_restore_the_default_settings">Confirm to restore the default Settings ?</string>
    <string name="reset">Reset</string>
    <string name="examine">Open the APP</string>
    <string name="unexamine">Close</string>
    <string name="alart_tip">Access to the APP for viewing</string>
    <string name="matching_fail">Fail</string>
    <string name="matchinging">Matching...</string>
    <string name="wait">Waitting....</string>
    <string name="matching_succeed">Succeed</string>
    <string name="tyre_succeed">Succeed</string>
    <string name="begin_batching">Begin Matching</string>
    <string name="begin_tyre">Begin</string>
    <string name="splashV2">V 2.0</string>
    <string name="splashV1">V 1.0</string>
    <string name="restart_tpms">ERROR:An unknown error!Please restart TPMS</string>
    <string name="tyre_fail">Fail</string>
    <string name="sound_level">Sound Level</string>
    <string name="tpms_notification">In the background TPMS</string>
    <string name="exit_app">Exit APP</string>
    <string name="confirm_exit_app">Confirm exit application ?</string>
    <string name="boot_app">Start on Boot</string>
    <string name="ver_info">Version</string>
    <string name="ver_update">Version Upgrade</string>
    <string name="backup_tire">Spare Tire</string>
    <string name="backup_tire_show">Show Spare tire</string>
    <string name="backup_tire_hide">Hide Spare tire</string>
    <string name="tip_handshake">With the equipment manufacture</string>
    <string name="no_internet">There is no Internet</string>
    <string name="to">TO</string>
    <string name="alarm">Warning:</string>
</resources>
