<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="220dp"
        android:background="#303030"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_n_tire_alarming"
                android:textColor="#ffffff"
                android:textSize="25dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#a1a1a1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tv_warn_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/alart_tip"
                    android:textColor="#fbdc0e"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="20dp">

                <Button
                    android:id="@+id/btn_unexamine"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/cance_btn_clk"
                    android:text="@string/unexamine"
                    android:textColor="#ffffff"
                    android:textSize="17dp" />

                <Button
                    android:id="@+id/btn_examine"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/sure_btn_clk"
                    android:text="@string/examine"
                    android:textColor="#ffffff"
                    android:textSize="17dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
