<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#303030"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center">

        <TextView
            android:id="@+id/match_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matchinging"
            android:textColor="#ffffff"
            android:textSize="25dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="#a1a1a1" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical|center_horizontal|center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/wait_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="120s"
                android:textColor="#ffffff"
                android:textSize="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/wait"
                android:textColor="#ffffff"
                android:textSize="24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/cance_domain"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/cance_btn_clk"
                android:text="@string/comm_cancel"
                android:textColor="#ffffff"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
